--- a/tootoo/r5/parallel-constitution/parallel-constitution-r1.html
+++ b/tootoo/r5/parallel-constitution/parallel-constitution-r1.html
@@ -27,8 +27,7 @@
 		user: 'jaanga',
 		repo: 'jaanga.github.io',
 		branch: 'master',
-//		path: 'demo/parallel-constitution/',
-		path: '',
+		path: 'demo/parallel-constitution/',
 		anchor: '',
 		file: '',
 
@@ -43,7 +42,8 @@
 
 if ( location.protocol === 'file:' && user.defaultFile ) {
 
-//	user.path = '../../../../jaanga.github.io/demo/parallel-constitution/';
+//	user.path = '';
+	user.path = '../../../../jaanga.github.io/demo/parallel-constitution/';
 //	user.defaultFile = 'egypt-parallel-constitution.md';
 
 }
