--- a/tootoo/r5/diana-chace/tootoo5-diana-chace-r1.html
+++ b/tootoo/r5/diana-chace/tootoo5-diana-chace-r1.html
@@ -20,12 +20,11 @@
 
 // Copyright 2017 Pushme Pullyou authors ~ MIT license
 
-	var images = 'https://prediqtiv.github.io/images/';
 
 	var user = {
 
-		user: 'diana-chace',
-		repo: 'diana-chace.github.io',
+		user: 'dianachace',
+		repo: 'dianachace.github.io',
 		branch: 'master',
 		path: '',
 
