--- a/tootoo/r5/diana-chace/tootoo5-diana-chace-r1.html
+++ b/tootoo/r5/diana-chace/tootoo5-diana-chace-r1.html
@@ -4,10 +4,10 @@
 <meta charset=utf-8 >
 <title>TooToo5 Diana Chace R1</title>
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
-<meta name=description content='Browse and view files on GitHub with remarkable ease.' >
+<meta name=description content='Browse and view files on DianaChace.com with remarkable ease.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
-<meta name=date content='2017-06-20' >
-<link rel=stylesheet href=../js-dev/style.css >
+<meta name=date content='2017-06-27' >
+<link rel=stylesheet href=style-dc.css >
 </head>
 <body>
 <script src=https://cdn.rawgit.com/showdownjs/showdown/master/dist/showdown.min.js ></script>
