--- a/tootoo/r5/diana-chace/merge-dc-files-into-one-r1.html
+++ b/tootoo/r5/diana-chace/merge-dc-files-into-one-r1.html
@@ -12,12 +12,12 @@
 <script>
 // Copyright 2017 pushMe pullYou authors ~ MIT license
 
-	var fileName = '.html';
+	var fileName = 'tootoo5-diana-chace-r1.html';
 	var text;
 
 	files = [
 
-		'../js-dev/style.css',
+		'style-dc.css',
 		'../js-dev/html.js',
 		'../js-dev/menu.js',
 		'../js-dev/contents.js',
@@ -27,7 +27,7 @@
 
 	sources = [
 
-		'<link rel=stylesheet href=../js-dev/style.css >',
+		'<link rel=stylesheet href=style-dc.css >',
 		'<script src=../js-dev/html.js ><\/script>',
 		'<script src=../js-dev/menu.js ><\/script>',
 		'<script src=../js-dev/contents.js ><\/script>',
