--- a/tootoo/utilities/merge-files-into-one/merge-files-into-one-r1.html
+++ b/tootoo/utilities/merge-files-into-one/merge-files-into-one-r1.html
@@ -12,7 +12,7 @@
 <script>
 // Copyright 2017 pushMe pullYou authors ~ MIT license
 
-	var fileName = '.html';
+	var fileName = 'tootoo5-pushme-pullyou-r1.html';
 	var text;
 
 	files = [
