--- a/tootoo/r6/diana-chace/tt6-diana-chace-r1.html
+++ b/tootoo/r6/diana-chace/tt6-diana-chace-r1.html
@@ -2,7 +2,7 @@
 <html lang=en >
 <head>
 <meta charset=utf-8 >
-<title>TooToo5 Diana Chace R1</title>
+<title>Diana Chace</title>
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
 <meta name=description content='Browse and view files on DianaChace.com with remarkable ease.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
@@ -33,7 +33,7 @@
 		tagLine : '.',
 		subText : '',
 		title : '<img src=https://dianachace.github.io/diana.gif  height=45 >',
-//		defaultFile : 'README.md'
+		defaultFile : 'home-page.html',
 	}
 
 	user.server = location.protocol === 'file:' ? '../../../../dianachace.github.io/' :
@@ -42,7 +42,7 @@
 	MNU.tableOfContents =
 
 `
-* [Home Page]( #index.html )
+* [Home Page]( #home-page.html )
 
 Model-Building Career
 * [Art of Power]( #artofpower/index.html )
