add cheechee: an RSS reader

--- a/tootoo/r6/diana-chace/tt6-diana-chace-r1.html
+++ b/tootoo/r6/diana-chace/tt6-diana-chace-r1.html
@@ -37,7 +37,8 @@
 	}
 
 	user.server = location.protocol === 'file:' ? '../../../../dianachace.github.io/' :
-		'https://rawgit.com/' + user.user + '/' + user.repo + '/' + user.branch + '/' ;
+//		'https://rawgit.com/' + user.user + '/' + user.repo + '/' + user.branch + '/' ;
+		'https://dianachace.github.io/' ;
 
 	MNU.tableOfContents =
 
