add files utilities

--- a/tootoo/r6/pushme-pullyou/tt6-pushme-pullyou-r1.html
+++ b/tootoo/r6/pushme-pullyou/tt6-pushme-pullyou-r1.html
@@ -80,6 +80,11 @@
 * [Merge Files into one]( #tootoo/utilities/merge-files-into-one/README.md )
 * &#x1F5D7; [Merge Files into one]( https://pushme-pullyou.github.io/tootoo/utilities/merge-files-into-one/merge-files-into-one-r3.html )
 * [Markdown Cheat Sheet]( #tootoo/utilities/make-github-readme/readme-cheat-sheet.md )
+
+#### Utilities
+* [Utilities Read Me]( #utilities/README.md )
+* [Make Read Me Read Me]( #utilities/make-github-readme2/README.md )
+* [Merge Files into one]( #utilities/merge-files-into-one/README.md
 `;
 
 	TYP.typeSelectedIndex = 0;
