--- a/utilities/index.html
+++ b/utilities/index.html
@@ -6,7 +6,7 @@
 <body>
 <script>
 
-	window.location.href = '../../index.html#utilities/make-github-readme2/README.md';
+	window.location.href = '../index.html#utilities/README.md';
 
 </script>
 </body>
