--- a/utilities/readme-cheat-sheet.html
+++ b/utilities/readme-cheat-sheet.html
@@ -6,7 +6,7 @@
 <body>
 <script>
 
-	window.location.href = '../../index.html#utilities/make-github-readme2/README.md';
+window.location.href = '../../../index.html#tootoo/utilities/make-github-readme/readme-cheat-sheet.md';
 
 </script>
 </body>
