--- a/tootoo/r6/pushme-pullyou/tt6-pushme-pullyou-r1.html
+++ b/tootoo/r6/pushme-pullyou/tt6-pushme-pullyou-r1.html
@@ -44,7 +44,7 @@
 
 	MNU.tableOfContents =
 
-`### Pushme-Pullyou
+`### <span title="Gazelle-unicorn cross with two heads at opposite ends of its body" >Pushme-Pullyou</span>
 * [Read Me]( #README.md )
 ### GubGub <small><i>explore GH repos</i></small>
 * [Read Me]( #gubgub/README.md )
@@ -59,11 +59,11 @@
 * [TooToo6 Anywhere Read Me]( #tootoo/r6/anywhere/README.md )
 <!-- * &#x1F5D7; [TooToo6 Anywhere]( https://pushme-pullyou.github.io/tootoo/r6/anywhere/) -->
 * &#x1F5D7; [Diana Chace Read Me]( https://pushme-pullyou.github.io/tootoo/r6/diana-chace/tt6-diana-chace-r1.html )
-* &#x1F5D7; [Ladybug Web Read Me]( ../ladybug-web/tt6-ladybug-web-r1.html )
-* &#x1F5D7; [Jaanga Terrain3]( ../jaanga-terrain3/tt6-jaanga-terrain3-r1.html )
+* [Ladybug Web]( #tootoo/r6/ladybug-web/tt6-ladybug-web-r1.html )
+* [Jaanga Terrain3]( #tootoo/r6/jaanga-terrain3/tt6-jaanga-terrain3-r1.html )
 * [TooToo6 pushMe pullYou Read Me]( #tootoo/r6/pushme-pullyou/README.md )
 * [TooToo6 Skim Read Me]( #tootoo/r6/skim/README.md )
-* &#x1F5D7; [TooToo6 Skim Read Me]( ../skim/tt6-skim-r1.html )
+* [TooToo6 Skim]( #tootoo/r6/skim/tt6-skim-r1.html )
 
 #### TooToo 5
 * [TooToo Anywhere Read Me]( #tootoo/r5/anywhere/README.md )
@@ -119,8 +119,6 @@
 		TYP.initSelectType();
 
 		TYP.selectMenuType();
-
-		MNU.setAbout();
 
 	}
 
