--- a/tootoo/r6/ladybug-web/tt6-ladybug-web-r1.html
+++ b/tootoo/r6/ladybug-web/tt6-ladybug-web-r1.html
@@ -53,7 +53,14 @@
 ### Analemma 3D
 * [Analemma 3D Read Me]( #analemma-3d/readme.md )
 * [Analemma 3D]( #analemma-3d/index.html )
-### Ladybug Web Solar Calculator
+
+
+### Solar Calculators
+
+#### Calculators Compare
+* [Calculators Compare Read me]( #solar-calculator-compare/readme.md )
+* [Calculators Compare]( #solar-calculator-compare/calculations-compare-r5.html )
+
 #### Ladybug Solar Calculator
 * [Ladybug Solar Calculator Read me]( #solar-calculator-ladybug-web/readme.md)
 * [Ladybug Solar Calculator]( #solar-calculator-ladybug-web/solar-calculator-ladybug-web-viewer-r3.html )
@@ -66,9 +73,6 @@
 #### NOAA
 * [NOAA Solar Calculator Read Me]( #solar-calculator-noaa/readme.md )
 * [NOAA Solar Calculator]( #solar-calculator-noaa/ladybug-web-solar-calculator-noaa-viewer-r3.html )
-#### Solar Calculator Compare
-* [Calculators Compare Read me]( #solar-calculator-compare/readme.md )
-* [Calculators Compare]( #solar-calculator-compare/calculations-compare-r5.html )
 
 ### Shadows
 #### Shadow OBJ Core
