--- a/utilities/merge-files-into-one/merge-files-into-one-r2.html
+++ b/utilities/merge-files-into-one/merge-files-into-one-r2.html
@@ -6,13 +6,14 @@
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
 <meta name=description content='Merge all the JavaScript, style and HTML into a single file' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
-<meta name=date content='2017-06-24' >
+<meta name=date content='2017-07-01' >
 </head>
 <body>
 <script>
 // Copyright 2017 pushMe pullYou authors ~ MIT license
 
 	var fileName = 'tt6-pushme-pullyou-r1.html';
+
 	var text;
 
 	files = [
@@ -76,10 +77,10 @@
 			'<div id=menu >' +
 
 				'<h2>' +
-					'<a href=http://jaanga.github.io title="Jaanga - your 3D happy place" > &#x2766 </a><br>' +
+					'<a href=http://pushme-pullyou.github.io title="Jaanga - your pulling and pushing happy place" > &#x2766 </a><br>' +
 //					'<a href="" title="Click here to refresh this page" >' + document.title + '</a>' +
 					'<a href="" title="Click here to refresh this page" >' + location.pathname.split( '/' ).pop().slice( 0, -5).replace( /-/g, ' ' ) + '</a>' +
-					' ~ <a href=index.html#readme.md onmouseover=popHelp.style.display=""; onmouseout=popHelp.style.display="none"; > &#x24D8; </a>' +
+					' ~ <a href="./index.html" onmouseover=popHelp.style.display=""; onmouseout=popHelp.style.display="none"; > &#x24D8; </a>' +
 				'</h2>' +
 
 				'<div class=popUp id=popHelp style=display:none; ><p>Hi there!</p>Click the i-in-circle, info icon for latest updates.</div>' +
