--- a/index.html
+++ b/index.html
@@ -1008,7 +1008,7 @@ xhr.send( null );
 // Copyright 2017 Pushme Pullyou authors ~ MIT license
 
 var path, user;
-path = ''; // location.protocol === 'file:' ? '../../../' : '';
+path = ''; //location.protocol === 'file:' ? '../../../' : '';
 
 
 user = {
@@ -1047,11 +1047,11 @@ MNU.tableOfContents =
 * [TooToo6 Anywhere Read Me]( #tootoo/r6/anywhere/README.md )
 <!-- * &#x1F5D7; [TooToo6 Anywhere]( https://pushme-pullyou.github.io/tootoo/r6/anywhere/) -->
 * &#x1F5D7; [Diana Chace Read Me]( https://pushme-pullyou.github.io/tootoo/r6/diana-chace/tt6-diana-chace-r1.html )
-* &#x1F5D7; [Ladybug Web Read Me]( tootoo/r6/ladybug-web/tt6-ladybug-web-r1.html )
-* &#x1F5D7; [Jaanga Terrain3]( tootoo/r6/jaanga-terrain3/tt6-jaanga-terrain3-r1.html )
+* [Ladybug Web]( #tootoo/r6/ladybug-web/tt6-ladybug-web-r1.html )
+* [Jaanga Terrain3]( #tootoo/r6/jaanga-terrain3/tt6-jaanga-terrain3-r1.html )
 * [TooToo6 pushMe pullYou Read Me]( #tootoo/r6/pushme-pullyou/README.md )
 * [TooToo6 Skim Read Me]( #tootoo/r6/skim/README.md )
-* &#x1F5D7; [TooToo6 Skim Read Me]( tootoo/r6/skim/tt6-skim-r1.html )
+* [TooToo6 Skim]( #tootoo/r6/skim/tt6-skim-r1.html )
 
 #### TooToo 5
 * [TooToo Anywhere Read Me]( #tootoo/r5/anywhere/README.md )
@@ -1072,7 +1072,7 @@ MNU.tableOfContents =
 * [Utilities Read Me]( #utilities/README.md )
 * [Make Read Me Read Me]( #utilities/make-github-readme2/README.md )
 * [Merge Files into one]( #utilities/merge-files-into-one/README.md )
-* [Markdown Cheat Sheet]( #utilities/readme-cheat-sheet.md )
+* [Markdown Cheat Sheet]( #utilities/markdown-cheat-sheet.md )
 `;
 
 TYP.typeSelectedIndex = 0;
